lib/src/ffi/vtk_flutter_bindings.g.dart

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint, unused_import
@ffi.DefaultAsset('package:vtk_flutter/vtk_flutter_core.dart')
library;

import 'dart:ffi' as ffi;

@ffi.Native<ffi.Uint32 Function()>()
external int vtk_flutter_abi_version();

@ffi.Native<ffi.Pointer<VtkFlutterCoreApiV2> Function()>()
external ffi.Pointer<VtkFlutterCoreApiV2> vtk_flutter_get_core_api_v2();

@ffi.Native<ffi.Void Function(ffi.Pointer<VtkFlutterStatus>)>()
external void vtk_flutter_status_clear(ffi.Pointer<VtkFlutterStatus> status);

@ffi.Native<
  ffi.Int32 Function(
    ffi.Pointer<ffi.Pointer<VtkFlutterSession>>,
    ffi.Pointer<VtkFlutterStatus>,
  )
>()
external int vtk_flutter_session_create(
  ffi.Pointer<ffi.Pointer<VtkFlutterSession>> out_session,
  ffi.Pointer<VtkFlutterStatus> status,
);

@ffi.Native<ffi.Void Function(ffi.Pointer<VtkFlutterSession>)>()
external void vtk_flutter_session_destroy(
  ffi.Pointer<VtkFlutterSession> session,
);

@ffi.Native<
  ffi.Int32 Function(
    ffi.Pointer<VtkFlutterVolume>,
    ffi.Pointer<VtkFlutterStatus>,
  )
>()
external int vtk_flutter_validate_volume(
  ffi.Pointer<VtkFlutterVolume> volume,
  ffi.Pointer<VtkFlutterStatus> status,
);

@ffi.Native<
  ffi.Int32 Function(
    ffi.Pointer<VtkFlutterSession>,
    ffi.Pointer<VtkFlutterVolume>,
    ffi.Pointer<VtkFlutterStatus>,
  )
>()
external int vtk_flutter_session_set_volume(
  ffi.Pointer<VtkFlutterSession> session,
  ffi.Pointer<VtkFlutterVolume> volume,
  ffi.Pointer<VtkFlutterStatus> status,
);

@ffi.Native<
  ffi.Int32 Function(
    ffi.Pointer<VtkFlutterRenderRequest>,
    ffi.Pointer<VtkFlutterStatus>,
  )
>()
external int vtk_flutter_validate_render_request(
  ffi.Pointer<VtkFlutterRenderRequest> request,
  ffi.Pointer<VtkFlutterStatus> status,
);

@ffi.Native<
  ffi.Int32 Function(
    ffi.Pointer<VtkFlutterSession>,
    ffi.Pointer<VtkFlutterRenderRequest>,
    ffi.Pointer<VtkFlutterMetrics>,
    ffi.Pointer<VtkFlutterStatus>,
  )
>()
external int vtk_flutter_session_render(
  ffi.Pointer<VtkFlutterSession> session,
  ffi.Pointer<VtkFlutterRenderRequest> request,
  ffi.Pointer<VtkFlutterMetrics> metrics,
  ffi.Pointer<VtkFlutterStatus> status,
);

final class VtkFlutterSession extends ffi.Opaque {}

final class VtkFlutterTextureTarget extends ffi.Opaque {}

enum VtkFlutterStatusCode {
  VTK_FLUTTER_STATUS_OK(0),
  VTK_FLUTTER_STATUS_INVALID_ARGUMENT(1),
  VTK_FLUTTER_STATUS_INVALID_STATE(2),
  VTK_FLUTTER_STATUS_RENDER_TARGET_UNAVAILABLE(3),
  VTK_FLUTTER_STATUS_INTERNAL_ERROR(4);

  final int value;
  const VtkFlutterStatusCode(this.value);

  static VtkFlutterStatusCode fromValue(int value) => switch (value) {
    0 => VTK_FLUTTER_STATUS_OK,
    1 => VTK_FLUTTER_STATUS_INVALID_ARGUMENT,
    2 => VTK_FLUTTER_STATUS_INVALID_STATE,
    3 => VTK_FLUTTER_STATUS_RENDER_TARGET_UNAVAILABLE,
    4 => VTK_FLUTTER_STATUS_INTERNAL_ERROR,
    _ => throw ArgumentError('Unknown value for VtkFlutterStatusCode: $value'),
  };
}

enum VtkFlutterRenderMode {
  VTK_FLUTTER_RENDER_OBLIQUE_MPR(1),
  VTK_FLUTTER_RENDER_VOLUME_3D(2),
  VTK_FLUTTER_RENDER_VOLUME_LOCATOR(3);

  final int value;
  const VtkFlutterRenderMode(this.value);

  static VtkFlutterRenderMode fromValue(int value) => switch (value) {
    1 => VTK_FLUTTER_RENDER_OBLIQUE_MPR,
    2 => VTK_FLUTTER_RENDER_VOLUME_3D,
    3 => VTK_FLUTTER_RENDER_VOLUME_LOCATOR,
    _ => throw ArgumentError('Unknown value for VtkFlutterRenderMode: $value'),
  };
}

enum VtkFlutterPixelFormatV2 {
  VTK_FLUTTER_PIXEL_FORMAT_RGBA8888(1),
  VTK_FLUTTER_PIXEL_FORMAT_BGRA8888(2);

  final int value;
  const VtkFlutterPixelFormatV2(this.value);

  static VtkFlutterPixelFormatV2 fromValue(int value) => switch (value) {
    1 => VTK_FLUTTER_PIXEL_FORMAT_RGBA8888,
    2 => VTK_FLUTTER_PIXEL_FORMAT_BGRA8888,
    _ => throw ArgumentError(
      'Unknown value for VtkFlutterPixelFormatV2: $value',
    ),
  };
}

final class VtkFlutterStatus extends ffi.Struct {
  @ffi.Int32()
  external int code;

  @ffi.Array.multi([256])
  external ffi.Array<ffi.Char> message;
}

final class VtkFlutterViewport extends ffi.Struct {
  @ffi.Int32()
  external int width;

  @ffi.Int32()
  external int height;
}

final class VtkFlutterVolume extends ffi.Struct {
  external ffi.Pointer<ffi.Int16> voxels;

  @ffi.Uint64()
  external int voxel_count;

  @ffi.Int32()
  external int width;

  @ffi.Int32()
  external int height;

  @ffi.Int32()
  external int depth;

  @ffi.Array.multi([16])
  external ffi.Array<ffi.Double> index_to_patient;
}

final class VtkFlutterRenderRequest extends ffi.Struct {
  @ffi.Int32()
  external int mode;

  external VtkFlutterViewport viewport;

  @ffi.Double()
  external double window_center;

  @ffi.Double()
  external double window_width;

  @ffi.Array.multi([3])
  external ffi.Array<ffi.Double> plane_origin;

  @ffi.Array.multi([3])
  external ffi.Array<ffi.Double> plane_normal;

  @ffi.Double()
  external double camera_azimuth_degrees;

  @ffi.Double()
  external double camera_elevation_degrees;

  @ffi.Double()
  external double camera_zoom;
}

final class VtkFlutterMetrics extends ffi.Struct {
  @ffi.Uint64()
  external int volume_bytes;

  @ffi.Uint64()
  external int frame_bytes;

  @ffi.Uint64()
  external int surface_allocation_bytes;

  @ffi.Uint64()
  external int surface_checksum;

  @ffi.Uint64()
  external int surface_changed_pixels;

  @ffi.Uint64()
  external int surface_unique_byte_values;

  @ffi.Uint64()
  external int cpu_checksum;

  @ffi.Uint64()
  external int cpu_changed_pixels;

  @ffi.Uint64()
  external int cpu_unique_byte_values;

  @ffi.Double()
  external double render_ms;

  @ffi.Double()
  external double surface_submit_ms;

  @ffi.Double()
  external double gpu_sync_wait_ms;

  @ffi.Double()
  external double cpu_readback_ms;

  @ffi.Int32()
  external int frame_width;

  @ffi.Int32()
  external int frame_height;

  @ffi.Int32()
  external int patient_to_clip_valid;

  @ffi.Array.multi([16])
  external ffi.Array<ffi.Double> patient_to_clip;
}

final class VtkFlutterCpuFrameV2 extends ffi.Struct {
  @ffi.Uint32()
  external int struct_size;

  @ffi.Uint32()
  external int version;

  external ffi.Pointer<ffi.Uint8> pixels;

  @ffi.Uint64()
  external int capacity_bytes;

  @ffi.Uint64()
  external int row_bytes;

  @ffi.Int32()
  external int pixel_format;
}

typedef VtkFlutterBeginFrameCallbackV2Function =
    ffi.Int32 Function(
      ffi.Pointer<ffi.Void> user_data,
      ffi.Pointer<VtkFlutterViewport> viewport,
      ffi.Pointer<VtkFlutterCpuFrameV2> frame,
      ffi.Pointer<VtkFlutterStatus> status,
    );
typedef DartVtkFlutterBeginFrameCallbackV2Function =
    int Function(
      ffi.Pointer<ffi.Void> user_data,
      ffi.Pointer<VtkFlutterViewport> viewport,
      ffi.Pointer<VtkFlutterCpuFrameV2> frame,
      ffi.Pointer<VtkFlutterStatus> status,
    );
typedef VtkFlutterBeginFrameCallbackV2 =
    ffi.Pointer<ffi.NativeFunction<VtkFlutterBeginFrameCallbackV2Function>>;
typedef VtkFlutterEndFrameCallbackV2Function =
    ffi.Int32 Function(
      ffi.Pointer<ffi.Void> user_data,
      ffi.Pointer<VtkFlutterMetrics> metrics,
      ffi.Pointer<VtkFlutterStatus> status,
    );
typedef DartVtkFlutterEndFrameCallbackV2Function =
    int Function(
      ffi.Pointer<ffi.Void> user_data,
      ffi.Pointer<VtkFlutterMetrics> metrics,
      ffi.Pointer<VtkFlutterStatus> status,
    );
typedef VtkFlutterEndFrameCallbackV2 =
    ffi.Pointer<ffi.NativeFunction<VtkFlutterEndFrameCallbackV2Function>>;
typedef VtkFlutterCancelFrameCallbackV2Function =
    ffi.Void Function(ffi.Pointer<ffi.Void> user_data);
typedef DartVtkFlutterCancelFrameCallbackV2Function =
    void Function(ffi.Pointer<ffi.Void> user_data);
typedef VtkFlutterCancelFrameCallbackV2 =
    ffi.Pointer<ffi.NativeFunction<VtkFlutterCancelFrameCallbackV2Function>>;

final class VtkFlutterFrameCallbacksV2 extends ffi.Struct {
  @ffi.Uint32()
  external int struct_size;

  @ffi.Uint32()
  external int version;

  external ffi.Pointer<ffi.Void> user_data;

  external VtkFlutterBeginFrameCallbackV2 begin_frame;

  external VtkFlutterEndFrameCallbackV2 end_frame;

  external VtkFlutterCancelFrameCallbackV2 cancel_frame;
}

final class VtkFlutterCoreApiV2 extends ffi.Struct {
  @ffi.Uint32()
  external int struct_size;

  @ffi.Uint32()
  external int version;

  external ffi.Pointer<
    ffi.NativeFunction<ffi.Void Function(ffi.Pointer<VtkFlutterStatus> status)>
  >
  status_clear;

  external ffi.Pointer<
    ffi.NativeFunction<
      ffi.Int32 Function(
        ffi.Pointer<ffi.Pointer<VtkFlutterSession>> out_session,
        ffi.Pointer<VtkFlutterStatus> status,
      )
    >
  >
  session_create;

  external ffi.Pointer<
    ffi.NativeFunction<
      ffi.Void Function(ffi.Pointer<VtkFlutterSession> session)
    >
  >
  session_destroy;

  external ffi.Pointer<
    ffi.NativeFunction<
      ffi.Int32 Function(
        ffi.Pointer<VtkFlutterVolume> volume,
        ffi.Pointer<VtkFlutterStatus> status,
      )
    >
  >
  validate_volume;

  external ffi.Pointer<
    ffi.NativeFunction<
      ffi.Int32 Function(
        ffi.Pointer<VtkFlutterSession> session,
        ffi.Pointer<VtkFlutterVolume> volume,
        ffi.Pointer<VtkFlutterStatus> status,
      )
    >
  >
  session_set_volume;

  external ffi.Pointer<
    ffi.NativeFunction<
      ffi.Int32 Function(
        ffi.Pointer<VtkFlutterRenderRequest> request,
        ffi.Pointer<VtkFlutterStatus> status,
      )
    >
  >
  validate_render_request;

  external ffi.Pointer<
    ffi.NativeFunction<
      ffi.Int32 Function(
        ffi.Pointer<VtkFlutterSession> session,
        ffi.Pointer<VtkFlutterRenderRequest> request,
        ffi.Pointer<VtkFlutterMetrics> metrics,
        ffi.Pointer<VtkFlutterStatus> status,
      )
    >
  >
  session_render;

  external ffi.Pointer<
    ffi.NativeFunction<
      ffi.Int32 Function(
        ffi.Pointer<VtkFlutterSession> session,
        ffi.Pointer<VtkFlutterTextureTarget> target,
        ffi.Pointer<VtkFlutterStatus> status,
      )
    >
  >
  session_attach_texture_target;

  external ffi.Pointer<
    ffi.NativeFunction<
      ffi.Int32 Function(
        ffi.Pointer<VtkFlutterSession> session,
        ffi.Pointer<VtkFlutterTextureTarget> target,
        ffi.Pointer<VtkFlutterStatus> status,
      )
    >
  >
  session_detach_texture_target;

  external ffi.Pointer<
    ffi.NativeFunction<
      ffi.Int32 Function(
        ffi.Pointer<VtkFlutterFrameCallbacksV2> callbacks,
        ffi.Pointer<ffi.Pointer<VtkFlutterTextureTarget>> out_target,
        ffi.Pointer<VtkFlutterStatus> status,
      )
    >
  >
  texture_target_create;

  external ffi.Pointer<
    ffi.NativeFunction<
      ffi.Int32 Function(
        ffi.Pointer<VtkFlutterTextureTarget> target,
        ffi.Pointer<VtkFlutterStatus> status,
      )
    >
  >
  texture_target_destroy;
}

const int VTK_FLUTTER_ABI_VERSION = 1;

const int VTK_FLUTTER_CORE_API_VERSION_2 = 2;

const int VTK_FLUTTER_FRAME_CALLBACKS_VERSION_2 = 2;

const int VTK_FLUTTER_CPU_FRAME_VERSION_2 = 2;

const int VTK_FLUTTER_STATUS_MESSAGE_CAPACITY = 256;
